--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link id="tema" id="theme" rel="stylesheet">
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="446193585923-cpi4jbi6h8f23rmqs7cc235e9h8ne8bb.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
